[build-system]
requires = ["setuptools>=61.2.0", "wheel"]
# The build backend is set to setuptools.build_meta, which is the default for setuptools.
build-backend = "setuptools.build_meta"

[project]
name = "resplot"
version = "0.1.0"
description = "Using pyvista for 3D plotting of reservoir data."
authors = [{ name = "Jan Ludvig Vinningland" , email = "janludvig@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "pyvista",
    "pyvistaqt",
    "numpy"    
]

[tool.setuptools]
# This is the directory where your package source code is located.
# It is set to "src" to follow the src layout convention.
# This means that your package will be found in the "src/resplot" directory.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# This tells setuptools to find packages in the "src" directory.
# It will look for packages in "src/resplot" and any subpackages.
where = ["src"]
